[package]
name = "openraildata_stomp_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
env_logger = "0.11.6"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
stomp-rs = "0.0.8"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full", "macros", "time", "rt"] }
