# SPDX-FileCopyrightText: 2023 - 2025 Dom Rodriguez <shymega@shymega.org.uk>
#
# SPDX-License-Identifier: MIT

[package]
name = "openraildata_stomp_client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nrdp_darwin_v16"

[[bin]]
name = "nrod_td"

[dependencies]
anyhow = "1.0.101"
async-stomp = "0.6.2"
env_logger = "0.11.9"
futures = "0.3.32"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
stomp-rs = "0.0.8"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
